--- a/quienes-somos/quienes-somos.html
+++ b/quienes-somos/quienes-somos.html
@@ -96,27 +96,38 @@
     </div>
 
     <div class="container-fluid bg-dark py-2">
-    <div class="container-fluid text-white-50 mb-4 justify-content-center">
+    <div class="container-fluid text-white mb-4 justify-content-center">
       <div class="row">
         <div class="col-sm">
-            <h3>Nuestra Misión</h3>
+            <h3 class="fw-bolder py-3">Nuestra Misión</h3>
 
-            nuestra mision es proveer de herramientas  para el mecanizado, lubricantes, elementos de sujecion, e instrumentos de medicion, entre otros insumos , a nuestros clientes; en conjunto con el mejor y mas reponsable asesoramiento tecnico comercial; y brindandoles todo esto, con la mejor atension  y una amplia gama de servicios, con un precio acorde y en un tiempo de  entrega ideal. Todo esto manteniendo los valores que nos caracterizan desde nuestros incio. Responsabilidad, seriedad, eficacia, eficiencia, excelencia, honestidad y trabajo en equipo.
+            nuestra misión es proveer de herramientas  para el mecanizado, lubricantes, elementos de sujeción y de medición, entre otros insumos, 
+            a nuestros clientes, en conjunto con el mejor y más reponsable asesoramiento técnico comercial. <br>
+             A su vez, brindamos todo esto, con la mejor atención y una amplia gama de servicios, con un precio acorde y en un tiempo de  entrega ideal. 
+           <br>
+             Todo esto manteniendo los valores que nos caracterizan desde nuestros incios:
+             Responsabilidad, seriedad, eficacia, eficiencia, excelencia, honestidad y trabajo en equipo.
             </div>
         <div class="col-sm">
-            <h3>Nuestra visión</h3>
-            nuestra visión es proveer de herramientas  para el mecanizado, lubricantes, elementos de sujecion, e instrumentos de medicion , entre otros insumos , a nuestros clientes; en conjunto con el mejor y mas reponsable asesoramiento tecnico comercial; y brindarles todo esto con la mejor atension  y una amplia gama de servicios, con un precio acorde y  en un tiempo de  entrega ideal. Todo esto manteniendo los valores que nos caracterizan desde nuestros incio. Responsabilidad, seriedad, eficacia, eficiencia, excelencia, honestidad y trabajo en equipo. Todo con el objetivo de ser los mejores socios comerciales para nuestros clientes, y ser lideres en el mercado nacional.
+            <h3 class="fw-bolder py-3">Nuestra visión</h3>
+            nuestra misión es proveer de herramientas  para el mecanizado, lubricantes, elementos de sujeción y de medición, entre otros insumos, 
+            a nuestros clientes, en conjunto con el mejor y más reponsable asesoramiento técnico comercial. <br>
+             A su vez, brindamos todo esto, con la mejor atención y una amplia gama de servicios, con un precio acorde y en un tiempo de  entrega ideal. 
+           <br>
+             Todo esto manteniendo los valores que nos caracterizan desde nuestros incios:
+             Responsabilidad, seriedad, eficacia, eficiencia, excelencia, honestidad y trabajo en equipo. <br>
+             Todo con el objetivo de ser los mejores socios comerciales para nuestros clientes, y ser líderes en el mercado nacional.
             </div>
         <div class="col-sm">
-            <h3>Nuestros Valores</h3>
+            <h3 class="fw-bolder py-3">Nuestros Valores</h3>
 
-            -Eficacia <br>
-            -Eficiencia <br>
-            -Seriedad <br>
-            -Calidad <br>
-            -Responsabilidad <br>
-            -Honestidad <br>
-            -Solidaridad <br>           
+            -Eficacia <br> <br>
+            -Eficiencia <br> <br>
+            -Seriedad <br> <br>
+            -Calidad <br> <br>
+            -Responsabilidad <br> <br>
+            -Honestidad <br> <br>
+            -Solidaridad <br> <br>           
             -Trabajo en equipo</div>
       </div>
     </div>
