--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <a class="nav-link active" aria-current="page" href="#!">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#!">Quienes Somos</a>
+              <a class="nav-link" href="../Web Litoral/quienes-somos/quienes-somos.html">Quienes Somos</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#!">Productos</a>
