--- a/quienes-somos/quienes-somos.html
+++ b/quienes-somos/quienes-somos.html
@@ -67,7 +67,7 @@
         <h1 class="display-5 fw-bolder text-black mb-8 text-center my-5">
           Nuestra Historia
         </h1>
-        <p class="container-fluid text-black-50 mb-4">
+        <p class="container-fluid text-black-50 mb-4 pb-5">
           Nuestra historia comienza hace más de 20 años, cuando el fundador de
           la empresa con casi una decada de experiencia decide apostar al país
           en 1996 con un proyecto llamado "Abrasivos Litoral Herramientas
@@ -95,7 +95,7 @@
       </section>
     </div>
 
-    <div class="container-fluid bg-dark py-2">
+    <div class="container-fluid bg-dark ps-5 ">
     <div class="container-fluid text-white mb-4 justify-content-center">
       <div class="row">
         <div class="col-sm">
