--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
             <li class="nav-item">
               <a class="nav-link" href="#!">Productos</a>
             </li>
-            <li class="nav-item"><a class="nav-link" href="#!">Ofertas</a></li>
+
             <li class="nav-item">
               <a class="nav-link" href="#!">Catálogos</a>
             </li>
-            <li class="nav-item"><a class="nav-link" href="#!">Videos</a></li>
-            <li class="nav-item"><a class="nav-link" href="#!">Contacto</a></li>
+            
+
           </ul>
         </div>
       </div>
@@ -73,10 +73,10 @@
                 necesite.
               </p>
               <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
-                <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features"
+                <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#contacto"
                   >Contacto</a
                 >
-                <a class="btn btn-outline-light btn-lg px-4" href="#!"
+                <a class="btn btn-outline-light btn-lg px-4" href="#ofertas"
                   >Ofertas</a
                 >
               </div>
@@ -120,7 +120,7 @@
     <section class="bg-light py-5 border-bottom">
       <div class="container px-5 my-5">
         <div class="text-center mb-5">
-          <h2 class="fw-bolder">Nuestras Ofertas</h2>
+          <h2 class="fw-bolder"> <a id="ofertas"> Nuestras Ofertas </a></h2>
           <p class="lead mb-0">
             Para mas información, consultá con nuestro representante
           </p>
@@ -186,7 +186,7 @@
             <div class="container px-5 my-5 px-5">
                 <div class="text-center mb-5">
                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-envelope"></i></div>
-                    <h2 class="fw-bolder">Contacto</h2>
+                    <h2 class="fw-bolder"> <a id="contacto">Contacto</a></h2>
                     <p class="lead mb-0">Estamos a su disposición</p>
                 </div>
                 <div class="row gx-5 justify-content-center">
