--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
               <a class="nav-link" href="../Web Litoral/quienes-somos/quienes-somos.html">Quienes Somos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#!">Productos</a>
+              <a class="nav-link" href="../Web Litoral/productos/productos.html">Productos</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#!">Catálogos</a>
+              <a class="nav-link" href="../Web Litoral/catalogos/catalogos.html">Catálogos</a>
             </li>
             
 
