--- a/quienes-somos/quienes-somos.html
+++ b/quienes-somos/quienes-somos.html
@@ -48,11 +48,11 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#!">Productos</a>
+              <a class="nav-link" href="../productos/productos.html">Productos</a>
             </li>
           
             <li class="nav-item">
-              <a class="nav-link" href="#!">Catálogos</a>
+              <a class="nav-link" href="../catalogos/catalogos.html">Catálogos</a>
             </li>
             
 
@@ -74,7 +74,7 @@
           Químicas". El mismo constaba de la producción, comercialización y
           distribución de abrasivos y herramientas químicas. Al poco tiempo, se
           sumó la distrubución y comercialización de insertos de metal duro.
-          <br />
+          <br /> <br>
           Con el paso del tiempo se fueron sumando representaciones y
           distribuciones, entre ellas, las de prestigiosas marcas como:
           instrumentos de medición Asimeto, sierras bimetálicas sin fin
@@ -84,7 +84,7 @@
           herramientas nacionales Pampa, la cual abarca bits y cuchillas de
           cobaltos, herramientas soldadas, y calisuares. Además se obtuvo la
           representación a nivel nacional de las herramientas de metal duro
-          Dormer y Pramet. <br />
+          Dormer y Pramet. <br /> <br>
           En HL, creemos en el desarrollo constante, en invertir siempre para
           superarnos y por sobre todo en la industria nacional, por eso
           planeamos seguir creciendo junto a nuestros clientes. Apostando a la
@@ -102,20 +102,20 @@
             <h3 class="fw-bolder py-3">Nuestra Misión</h3>
 
             nuestra misión es proveer de herramientas  para el mecanizado, lubricantes, elementos de sujeción y de medición, entre otros insumos, 
-            a nuestros clientes, en conjunto con el mejor y más reponsable asesoramiento técnico comercial. <br>
+            a nuestros clientes, en conjunto con el mejor y más reponsable asesoramiento técnico comercial. <br> <br>
              A su vez, brindamos todo esto, con la mejor atención y una amplia gama de servicios, con un precio acorde y en un tiempo de  entrega ideal. 
-           <br>
+           <br> <br>
              Todo esto manteniendo los valores que nos caracterizan desde nuestros incios:
              Responsabilidad, seriedad, eficacia, eficiencia, excelencia, honestidad y trabajo en equipo.
             </div>
         <div class="col-sm">
             <h3 class="fw-bolder py-3">Nuestra visión</h3>
             nuestra misión es proveer de herramientas  para el mecanizado, lubricantes, elementos de sujeción y de medición, entre otros insumos, 
-            a nuestros clientes, en conjunto con el mejor y más reponsable asesoramiento técnico comercial. <br>
+            a nuestros clientes, en conjunto con el mejor y más reponsable asesoramiento técnico comercial. <br> <br>
              A su vez, brindamos todo esto, con la mejor atención y una amplia gama de servicios, con un precio acorde y en un tiempo de  entrega ideal. 
            <br>
              Todo esto manteniendo los valores que nos caracterizan desde nuestros incios:
-             Responsabilidad, seriedad, eficacia, eficiencia, excelencia, honestidad y trabajo en equipo. <br>
+             Responsabilidad, seriedad, eficacia, eficiencia, excelencia, honestidad y trabajo en equipo. <br> <br>
              Todo con el objetivo de ser los mejores socios comerciales para nuestros clientes, y ser líderes en el mercado nacional.
             </div>
         <div class="col-sm">
