--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container px-5">
 
-        <a class="navbar-brand" href="#!">              <img src="../Web Litoral/media/HL3-removebg-preview.png" alt=""></a>
+        <a class="navbar-brand" href="#!">              <img src="./media/HL3-removebg-preview.png" alt=""></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -42,14 +42,14 @@
               <a class="nav-link active" aria-current="page" href="#!">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../Web Litoral/quienes-somos/quienes-somos.html">Quienes Somos</a>
+              <a class="nav-link" href="./quienes-somos/quienes-somos.html">Quienes Somos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../Web Litoral/productos/productos.html">Productos</a>
+              <a class="nav-link" href="./productos/productos.html">Productos</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="../Web Litoral/catalogos/catalogos.html">Catálogos</a>
+              <a class="nav-link" href="./catalogos/catalogos.html">Catálogos</a>
             </li>
             
 
