--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
                 necesite.
               </p>
               <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
-                <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#contacto"
-                  >Contacto</a
-                >
-                <a class="btn btn-outline-light btn-lg px-4" href="#ofertas"
+                <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#ofertas"
                   >Ofertas</a
+                >
+                <a class="btn btn-outline-light btn-lg px-4" href="#contacto"
+                  >Contacto</a
                 >
               </div>
             </div>
