--- a/productos/productos.html
+++ b/productos/productos.html
@@ -78,6 +78,17 @@
               tronzado, ranurado, roscado y perforado. Poseemos calidades para
               todos los materiales a mecanizar.
             </p>
+          </div>
+          <div class="col-4 text-center">
+            <img src="../media/insertos-metal-duro.jpg" height="100rem" />
+          </div>
+        </div>
+      </section>
+    </div>
+    <div class="container-fluid px-5">
+      <section>
+        <div class="row">
+          <div class="col-8 container-fluid text-black mb-4 pb-5">
             <h3>Instrumentos de medición:</h3>
             <p class="">
               contamos con una amplia gama, calibres mecánicos, c/reloj,
@@ -85,18 +96,52 @@
               digitales. Relojes comparadores, bases magnécticas, especímetros,
               y alesómetros, entre otros.
             </p>
+          </div>
+          <div class="col-4 text-center">
+            <img src="../media/calibre-mecanico.jpg" height="100rem" />
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <div class="container-fluid px-5">
+      <section>
+        <div class="row">
+          <div class="col-8 container-fluid text-black mb-4 pb-5">
             <h3>Línea de herramientas PAMPA:</h3>
             <p class="">
               Cobaltos (bits cuadrados, rectangulares, redondos y cuchillas),
               calisuares,(expansibles y fijos como para máquina) y herramientas
               soldadas para tornos.
             </p>
+          </div>
+          <div class="col-4 text-center">
+            <img src="../media/pampa.jpg" height="100rem" />
+          </div>
+        </div>
+      </section>
+    </div>
+    <div class="container-fluid px-5">
+      <section>
+        <div class="row">
+          <div class="col-8 container-fluid text-black mb-4 pb-5">
             <h3>Lubricantes para mecanizado:</h3>
             <p class="">
               Entre los lubricantes contamos con solubles, aceites de corte,
               aceites de bancada y rectificado. A esto se le suman los pedidos
               especiales.(Fosfatisantes y desengrasantes, especiales)
             </p>
+          </div>
+          <div class="col-4 text-center">
+            <img src="../media/aceite-mecanizado.webp" height="100rem" />
+          </div>
+        </div>
+      </section>
+    </div>
+    <div class="container-fluid px-5">
+      <section>
+        <div class="row">
+          <div class="col-8 container-fluid text-black mb-4 pb-5">
             <h3>Elementos de sujeción:</h3>
             <p class="">
               Una amplia gama de elementos de sujeción a su disposición de la
@@ -105,6 +150,17 @@
               porta herramientas, porta cobaltos, y hasta torretas de cambio
               rápido.
             </p>
+          </div>
+          <div class="col-4 text-center">
+            <img src="../media/elemento-sujecion.jpg" height="120rem" />
+          </div>
+        </div>
+      </section>
+    </div>
+    <div class="container-fluid px-5">
+      <section>
+        <div class="row">
+          <div class="col-8 container-fluid text-black mb-4 pb-5">
             <h3>
               Brocas, machos, fresas, sierras, bandas, hojas bimetálicas sin fin
               y limas rotativas:
@@ -113,6 +169,17 @@
               Todas estas herramientas en sus distintos tipos, medidas y
               calidades.
             </p>
+          </div>
+          <div class="col-4 text-center">
+            <img src="../media/brocas.jpg" height="130rem" />
+          </div>
+        </div>
+      </section>
+    </div>
+    <div class="container-fluid px-5">
+      <section>
+        <div class="row">
+          <div class="col-8 container-fluid text-black mb-4 pb-5">
             <h3>Otros:</h3>
             <p class="">
               Dada la necesidad de nuestros clientes también comercializamos
@@ -124,14 +191,7 @@
             </p>
           </div>
           <div class="col-4 text-center">
-            <img src="../media/insertos-metal-duro.jpg" height="100vr" />
-            <br />
-            <img src="../media/calibre-mecanico.jpg" height="100vr" /> <br />
-            <img src="../media/pampa.jpg" height="100vr" /> <br />
-            <img src="../media/aceite-mecanizado.webp" height="120vr" /> <br />
-            <img src="../media/elemento-sujecion.jpg" height="120vr" /> <br />
-            <img src="../media/brocas.jpg" height="130vr" /> <br />
-            <img src="../media/mas.jpg" height="100vr" /> <br />
+            <img src="../media/mas.jpg" height="100rem" />
           </div>
         </div>
       </section>
