--- a/catalogos/catalogos.html
+++ b/catalogos/catalogos.html
@@ -18,6 +18,7 @@
     />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="../css/styles.css" rel="stylesheet" />
+    <link href="../css/style.css" rel="stylesheet" />
   </head>
   <body>
     <!-- Responsive navbar-->
@@ -78,15 +79,15 @@
                 roscado, ranurado y perforado.
               </p>
               <div class="row">
-                  <div class="col-4">
+                  <div class="col-xl-4">
              <a href="../media/introduccion.pdf"> <img src="../media/pdf.png" height="100vr"></a>
              <p class="lead text-black-50"> N°1:introducción, índice, porta herramientas y más.</p>
             </div>
-            <div class="col-4">
+            <div class="col-xl-4">
                 <a href="../media/n2.pdf"> <img src="../media/pdf.png" height="100vr"></a>
                 <p class="lead text-black-50"> N°2:insertos de torneado.</p>
                </div>
-               <div class="col-4">
+               <div class="col-xl-4">
                 <a href="../media/n3.pdf"> <img src="../media/pdf.png" height="100vr"></a>
                 <p class="lead text-black-50"> N°3:roscado, tronzado y fresado.</p>
                </div>
@@ -97,7 +98,7 @@
             
             <div class="container-fluid py-5">
                 <section>
-                  <div class="row">
+                  <div class="row responsive">
                     <div class="col-8 container-fluid text-black mb-4 pb-5">
                       <h2>Catálogo línea Dormer</h2>
                       <p class="lead text-black-50"> Machos, brocas, fresas y limas rotativas.</p>
