--- a/productos/productos.html
+++ b/productos/productos.html
@@ -79,7 +79,7 @@
               todos los materiales a mecanizar.
             </p>
           </div>
-          <div class="col-4 text-center">
+          <div class="col-md-4 text-center">
             <img src="../media/insertos-metal-duro.jpg" height="100rem" />
           </div>
         </div>
@@ -97,7 +97,7 @@
               y alesómetros, entre otros.
             </p>
           </div>
-          <div class="col-4 text-center">
+          <div class="col-md-4 text-center">
             <img src="../media/calibre-mecanico.jpg" height="100rem" />
           </div>
         </div>
@@ -115,7 +115,7 @@
               soldadas para tornos.
             </p>
           </div>
-          <div class="col-4 text-center">
+          <div class="col-md-4 text-center">
             <img src="../media/pampa.jpg" height="100rem" />
           </div>
         </div>
@@ -132,7 +132,7 @@
               especiales.(Fosfatisantes y desengrasantes, especiales)
             </p>
           </div>
-          <div class="col-4 text-center">
+          <div class="col-md-4 text-center">
             <img src="../media/aceite-mecanizado.webp" height="100rem" />
           </div>
         </div>
@@ -151,7 +151,7 @@
               rápido.
             </p>
           </div>
-          <div class="col-4 text-center">
+          <div class="col-md-4 text-center">
             <img src="../media/elemento-sujecion.jpg" height="120rem" />
           </div>
         </div>
@@ -170,7 +170,7 @@
               calidades.
             </p>
           </div>
-          <div class="col-4 text-center">
+          <div class="col-md-4 text-center">
             <img src="../media/brocas.jpg" height="130rem" />
           </div>
         </div>
@@ -190,7 +190,7 @@
               productos para la industria.
             </p>
           </div>
-          <div class="col-4 text-center">
+          <div class="col-md-4 text-center">
             <img src="../media/mas.jpg" height="100rem" />
           </div>
         </div>
