--- a/productos/productos.html
+++ b/productos/productos.html
@@ -71,7 +71,7 @@
         </h1>
 
         <div class="row">
-          <div class="col-8 container-fluid text-black mb-4 pb-5">
+          <div class="col-8 container-fluid text-black my-4 pb-5">
             <h3>Insertos de metal duro:</h3>
             <p class="">
               Entre estos se encuentran los insertos de torneado, fresado,
@@ -88,7 +88,7 @@
     <div class="container-fluid px-5">
       <section>
         <div class="row">
-          <div class="col-8 container-fluid text-black mb-4 pb-5">
+          <div class="col-8 container-fluid text-black my-4 pb-5">
             <h3>Instrumentos de medición:</h3>
             <p class="">
               contamos con una amplia gama, calibres mecánicos, c/reloj,
@@ -107,7 +107,7 @@
     <div class="container-fluid px-5">
       <section>
         <div class="row">
-          <div class="col-8 container-fluid text-black mb-4 pb-5">
+          <div class="col-8 container-fluid text-black my-4 pb-5">
             <h3>Línea de herramientas PAMPA:</h3>
             <p class="">
               Cobaltos (bits cuadrados, rectangulares, redondos y cuchillas),
@@ -124,7 +124,7 @@
     <div class="container-fluid px-5">
       <section>
         <div class="row">
-          <div class="col-8 container-fluid text-black mb-4 pb-5">
+          <div class="col-8 container-fluid text-black my-4 pb-5">
             <h3>Lubricantes para mecanizado:</h3>
             <p class="">
               Entre los lubricantes contamos con solubles, aceites de corte,
@@ -141,7 +141,7 @@
     <div class="container-fluid px-5">
       <section>
         <div class="row">
-          <div class="col-8 container-fluid text-black mb-4 pb-5">
+          <div class="col-8 container-fluid text-black my-4 pb-5">
             <h3>Elementos de sujeción:</h3>
             <p class="">
               Una amplia gama de elementos de sujeción a su disposición de la
@@ -160,7 +160,7 @@
     <div class="container-fluid px-5">
       <section>
         <div class="row">
-          <div class="col-8 container-fluid text-black mb-4 pb-5">
+          <div class="col-8 container-fluid text-black my-4 pb-5">
             <h3>
               Brocas, machos, fresas, sierras, bandas, hojas bimetálicas sin fin
               y limas rotativas:
@@ -179,7 +179,7 @@
     <div class="container-fluid px-5">
       <section>
         <div class="row">
-          <div class="col-8 container-fluid text-black mb-4 pb-5">
+          <div class="col-8 container-fluid text-black my-4 pb-5">
             <h3>Otros:</h3>
             <p class="">
               Dada la necesidad de nuestros clientes también comercializamos
