--- a/productos/productos.html
+++ b/productos/productos.html
@@ -70,7 +70,7 @@
           Productos
         </h1>
 
-        <div class="row">
+        <div class="row px-3">
           <div class="col-8 container-fluid text-black my-4 pb-5">
             <h3>Insertos de metal duro:</h3>
             <p class="">
@@ -87,7 +87,7 @@
     </div>
     <div class="container-fluid px-5">
       <section>
-        <div class="row">
+        <div class="row px-3">
           <div class="col-8 container-fluid text-black my-4 pb-5">
             <h3>Instrumentos de medición:</h3>
             <p class="">
@@ -106,7 +106,7 @@
 
     <div class="container-fluid px-5">
       <section>
-        <div class="row">
+        <div class="row px-3">
           <div class="col-8 container-fluid text-black my-4 pb-5">
             <h3>Línea de herramientas PAMPA:</h3>
             <p class="">
@@ -123,7 +123,7 @@
     </div>
     <div class="container-fluid px-5">
       <section>
-        <div class="row">
+        <div class="row px-3">
           <div class="col-8 container-fluid text-black my-4 pb-5">
             <h3>Lubricantes para mecanizado:</h3>
             <p class="">
@@ -140,7 +140,7 @@
     </div>
     <div class="container-fluid px-5">
       <section>
-        <div class="row">
+        <div class="row px-3">
           <div class="col-8 container-fluid text-black my-4 pb-5">
             <h3>Elementos de sujeción:</h3>
             <p class="">
@@ -159,7 +159,7 @@
     </div>
     <div class="container-fluid px-5">
       <section>
-        <div class="row">
+        <div class="row px-3">
           <div class="col-8 container-fluid text-black my-4 pb-5">
             <h3>
               Brocas, machos, fresas, sierras, bandas, hojas bimetálicas sin fin
@@ -178,7 +178,7 @@
     </div>
     <div class="container-fluid px-5">
       <section>
-        <div class="row">
+        <div class="row px-3">
           <div class="col-8 container-fluid text-black my-4 pb-5">
             <h3>Otros:</h3>
             <p class="">
