--- a/productos/productos.html
+++ b/productos/productos.html
@@ -190,7 +190,7 @@
               productos para la industria.
             </p>
           </div>
-          <div class="col-md-4 text-center">
+          <div class="col-md-4 text-center mb-4">
             <img src="../media/mas.jpg" height="100rem" />
           </div>
         </div>
